Closed Bug 1241727 Opened 10 years ago Closed 10 years ago

WebKitCSSMatrix inverse() should throw NotSupportedError

Categories

(Core :: DOM: CSS Object Model, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla47
Tracking Status
firefox46 --- fixed
firefox47 --- fixed

People

(Reporter: miketaylr, Assigned: wchen)

References

()

Details

Attachments

(1 file)

DOMMatrixReadyOnly.invertSelf() says to return a pile of NaNs, but WebKitCSSMatrix should actually throw a NotSupportedError DOMException to be compatible with Blink and WebKit. I've updated the spec to match their behavior in https://github.com/whatwg/compat/commit/b649853f2c35cd9def15fbef6c35eac2a6e43aa9.
Note: we don't know if this is actually needed for webcompat -- but it matches the behavior of Safari, Chrome and Edge (and is required to pass WebKit layout tests).
Assignee: nobody → wchen
Attachment #8711250 - Flags: review?(amarchesini)
Attachment #8711250 - Flags: review?(amarchesini) → review+
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla47
Comment on attachment 8711250 [details] [diff] [review] Inverting non-invertable WebKitCSSMatrix should throw NotSupportedError. Approval Request Comment [Feature/regressing bug #]: Bug 717722 for WebKitCSSMatrix support. [User impact if declined]: Unknown. It makes us less compatible with Chrome, Safari and Edge in theory. In practice we don't know if sites are broken as a result -- but it would be ideal to ship WebKitCSSMatrix and its related bug fixes in the same release (even if it won't ship past Aurora for the time being). [Describe test coverage new/current, TreeHerder]: Tests in patch. [Risks and why]: For web content, there's low risk. No web content is depending on the previous (spec-bug) behavior. Web content may be depending on the behavior this fix provides. [String/UUID change made/needed]: None (UUID changes are not for webidl, right?)
Attachment #8711250 - Flags: approval-mozilla-aurora?
Comment on attachment 8711250 [details] [diff] [review] Inverting non-invertable WebKitCSSMatrix should throw NotSupportedError. Improves web compat, includes tests. SGTM! Please uplift to aurora.
Attachment #8711250 - Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: