Bug 1241727 - Inverting non-invertible WebKitCSSMatrix should throw NotSupportedError. r=baku, a=lizzard